Fixed content visible output with system messages (not noty styled)

--- a/sites/all/themes/fusion/fusion_theory/css/other.css
+++ b/sites/all/themes/fusion/fusion_theory/css/other.css
@@ -519,6 +519,9 @@ button.ColVis_Button{
 }
 
 /*---------Styles for inner-search widget-------*/
+.page-search-dataset .tab-content {
+    overflow: visible;
+}
 /*input[id*="edit-include-empty"]{
     display: none;
 }
